[package]
name = "billing-alert-lambda"
version = "0.1.0"
authors = ["Kazumichi Yamamoto <yamamoto.febc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime="^0.4.1"
serde = "1.0.131"
serde_json = "1.0.59"
rusoto_core = "0.47.0"
rusoto_cloudwatch = "0.47.0"
tokio = { version = "^1.14.0"}