[package]
name = "bootstrap"
version = "0.1.0"
authors = ["Kazumichi Yamamoto <yamamoto.febc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime="^0.4.1"
serde = "1.0.131"
serde_json = "1.0.59"
rusoto_core = {version = "0.47.0", default_features = false, features = ["rustls"]}
rusoto_cloudwatch= {version = "0.47.0", default_features = false, features = ["rustls"]}
tokio = { version = "^1.14.0"}
log = "0.4.14"
simplelog = "0.11"
chrono = "0.4.19"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"]}